@@ -31,7 +31,32 @@ $english = array(
     'au_subgroups:option:default' => 'Time Created',
     'au_subgroups:option:alpha' => 'Alphabetical',
     'au_subgroups:widget:numdisplay' => 'Number of subgroups to display',
-    'au_subgroups:widget:description' => 'List subgroups for this group'
+    'au_subgroups:widget:description' => 'List subgroups for this group',
+	
+	/*
+	 * Move group
+	 */
+	'au_subgroups:move:edit:title' => "Make this group a subgroup of another group",
+	'au_subgroups:transfer:help' => "You can set this group as a subgroup of any other group you have permissions to edit.  If users are not a member of the new parent group, they will be removed from this group and sent a new invitation that will enroll them in the new parent group and all subgroups leading to this one. <b>This will also transfer any subgroups of this group</b>",
+	'au_subgroups:search:text' => "Search Groups",
+	'au_subgroups:search:noresults' => "No groups found",
+	'au_subgroups:error:timeout' => "Search timed out",
+	'au_subgroups:error:generic' => "An error has occurred with the search",
+	'au_subgroups:move:confirm' => "Are you sure you want to make this a subgroup of another group?",
+	'au_subgroups:error:permissions' => "You must have edit permissions for the subgroup and each parent up to the top.  Additionally, a group cannot move to a subgroup of itself.",
+	'au_subgroups:move:success' => "Group has been moved successfully",
+	'au_subgroups:error:invalid:group' => "Invalid group identifier",
+	'au_subgroups:invite:body' => "Hi %s,
+
+The group %s has been moved to a subgroup of the group %s.
+As you are not currently a member of the new parent group you have been removed from
+the subgroup.  You have been re-invited into the group, accepting the invitation will
+automatically join you as a member of all parent groups.
+
+Click below to view your invitations:
+
+%s",
+
 );
 					
 add_translation("en",$english);
