@@ -4,6 +4,12 @@ x.x
 
 1.6 ():
  - fixes potential php fatal error (wsod) under certain conditions
+ - adds ability to move a group and all subgroups to be a subgroup of another
+
+Notes on subgroup move:
+- must have edit permissions for subgroup and parent group up to the top level
+- cannot make a group a subgroup of itself or it's children
+- users in a moved group that aren't in the new parent group are removed, and invited into the hierarchy
 
 1.5 (11/19/2012):
  - added create subgroup link to parent group title menu again (make up your minds!)
